[package]
name = "rustop-rs"
version = "0.4.3"
authors = ["wojciechkepka <wojtek.kepka@protonmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Linux system information parser"
readme = "README.md"
homepage = "https://github.com/wojciechkepka/rustop"
repository = "https://github.com/wojciechkepka/rustop"
keywords = ["cli", "system", "linux", "info"]
categories = ["command-line-utilities"]

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.9"
clap = "2.31.2"
colored = "1.8"
glob = "0.3.0"