[package]
name = "rustop-rs"
version = "0.5.0"
authors = ["wojciechkepka <wojtek.kepka@protonmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Linux system information parser"
readme = "README.md"
homepage = "https://github.com/wojciechkepka/rustop"
repository = "https://github.com/wojciechkepka/rustop"
keywords = ["cli", "system", "linux", "info"]
categories = ["command-line-utilities"]

[lib]
name = "rustop"

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
colored = "1.8"
structopt = "0.3"
async-std = { version = "1.5.0", features = ["attributes"] }
anyhow = "1"
libc = "0.2.7"
